--- a/data/NigeriaTelecomChurn.ipynb
+++ b/data/NigeriaTelecomChurn.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -51,6 +51,7 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns"
@@ -1853,29 +1854,187 @@
     "## preprocessing the data\n",
     "\n",
     "- 全部NaNなものはdrop\n",
+    "- Customer IDは、churnには影響しないと思われるのでdrop\n",
     "- churnは、0, 1の文字列になっているのでboolに変換\n",
     "- network type, loved competitorで、NaNなデータは、unknownで補完する。また、カテゴリカルデータなので'category'に変換\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
+   "execution_count": 81,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>spend_total</th>\n",
+       "      <th>spend_sns</th>\n",
+       "      <th>spend_data</th>\n",
+       "      <th>consumption_data</th>\n",
+       "      <th>calls</th>\n",
+       "      <th>onnet</th>\n",
+       "      <th>offnet</th>\n",
+       "      <th>complaint</th>\n",
+       "      <th>nettype1</th>\n",
+       "      <th>nettype2</th>\n",
+       "      <th>loved_competitor1</th>\n",
+       "      <th>loved_competitor2</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>123.0</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>76.7140</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>1.4951</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>564.0</td>\n",
+       "      <td>6408.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>Uxaa</td>\n",
+       "      <td>Mango</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1316.0</td>\n",
+       "      <td>43.87</td>\n",
+       "      <td>98.8904</td>\n",
+       "      <td>4.14</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>1.0244</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>1626.0</td>\n",
+       "      <td>4373.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>Uxaa</td>\n",
+       "      <td>Mango</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2385.0</td>\n",
+       "      <td>79.50</td>\n",
+       "      <td>372.6300</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>6.0898</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>10411.0</td>\n",
+       "      <td>22039.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>Weematel</td>\n",
+       "      <td>Mango</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1614.0</td>\n",
+       "      <td>53.80</td>\n",
+       "      <td>530.2000</td>\n",
+       "      <td>6.85</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>3.3447</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>6822.0</td>\n",
+       "      <td>6274.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mango</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2175.0</td>\n",
+       "      <td>72.50</td>\n",
+       "      <td>554.1300</td>\n",
+       "      <td>6.99</td>\n",
+       "      <td>153.75</td>\n",
+       "      <td>673204.0342</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>3387.0</td>\n",
+       "      <td>7241.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2G</td>\n",
+       "      <td>3G</td>\n",
+       "      <td>Weematel</td>\n",
+       "      <td>Mango</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(1400, 16)"
+       "      age  tenure  spend_total  spend_sns  spend_data  consumption_data  \\\n",
+       "0   123.0    4.10      76.7140       0.00        1.25            1.4951   \n",
+       "1  1316.0   43.87      98.8904       4.14        1.25            1.0244   \n",
+       "2  2385.0   79.50     372.6300       3.51        1.25            6.0898   \n",
+       "3  1614.0   53.80     530.2000       6.85        1.25            3.3447   \n",
+       "4  2175.0   72.50     554.1300       6.99      153.75       673204.0342   \n",
+       "\n",
+       "   calls    onnet   offnet  complaint nettype1 nettype2 loved_competitor1  \\\n",
+       "0   14.0    564.0   6408.0        2.0       2G       2G              Uxaa   \n",
+       "1   27.0   1626.0   4373.0        1.0       2G       2G              Uxaa   \n",
+       "2  119.0  10411.0  22039.0        1.0       2G       2G          Weematel   \n",
+       "3   69.0   6822.0   6274.0        1.0       2G       2G                 0   \n",
+       "4   33.0   3387.0   7241.0        1.0       2G       3G          Weematel   \n",
+       "\n",
+       "  loved_competitor2  churn  \n",
+       "0             Mango  False  \n",
+       "1             Mango  False  \n",
+       "2             Mango  False  \n",
+       "3             Mango  False  \n",
+       "4             Mango  False  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df1 = df.dropna(how='all')\n",
-    "df1 = df1.rename(columns={'Customer ID': 'cid', 'Customer tenure in month': 'tenure', 'network_age': 'age', 'Total Spend in Months 1 and 2 of 2017': 'spend_total', 'Total SMS Spend': 'spend_sns', 'Total Data Spend': 'spend_data', 'Total Data Consumption': 'consumption_data', 'Total Unique Calls': 'calls', 'Total Onnet spend ': 'onnet', 'Total Offnet spend': 'offnet', 'Total Call centre complaint calls': 'complaint', 'Network type subscription in Month 1': 'nettype1', 'Network type subscription in Month 2': 'nettype2', 'Most Loved Competitor network in in Month 1': 'loved_competitor1', 'Most Loved Competitor network in in Month 2': 'loved_competitor2', 'Churn Status': 'churn'})\n",
+    "#df1.sort_values(by='cid')\n",
+    "\n",
+    "df1 = df1.drop(['Customer ID'], axis=1)\n",
+    "df1 = df1.rename(columns={'Customer tenure in month': 'tenure', 'network_age': 'age', 'Total Spend in Months 1 and 2 of 2017': 'spend_total', 'Total SMS Spend': 'spend_sns', 'Total Data Spend': 'spend_data', 'Total Data Consumption': 'consumption_data', 'Total Unique Calls': 'calls', 'Total Onnet spend ': 'onnet', 'Total Offnet spend': 'offnet', 'Total Call centre complaint calls': 'complaint', 'Network type subscription in Month 1': 'nettype1', 'Network type subscription in Month 2': 'nettype2', 'Most Loved Competitor network in in Month 1': 'loved_competitor1', 'Most Loved Competitor network in in Month 2': 'loved_competitor2', 'Churn Status': 'churn'})\n",
     "df1['churn'] = df1['churn'].astype(bool)\n",
     "\n",
     "df1['nettype1'].unique()\n",
@@ -1887,8 +2046,7 @@
     "df1['loved_competitor2'] = df1['loved_competitor2'].astype('category')\n",
     "\n",
     "df1.dtypes\n",
-    "#df1.sort_values(by='cid')\n",
-    "\n"
+    "df1.head()"
    ]
   },
   {
