--- a/data/NigeriaTelecomChurn.ipynb
+++ b/data/NigeriaTelecomChurn.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css\">\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css\">\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -43,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -59,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -72,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -710,25 +737,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1398</th>\n",
-       "      <td>ADF1971</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>3.63</td>\n",
-       "      <td>45.0900</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6.581623e+05</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>240.0</td>\n",
-       "      <td>3611.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3G</td>\n",
-       "      <td>Uxaa</td>\n",
-       "      <td>Zintel</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1219</th>\n",
        "      <td>ADF1972</td>\n",
        "      <td>415.0</td>\n",
@@ -1279,9 +1287,28 @@
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1400</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1400 rows × 16 columns</p>\n",
+       "<p>1401 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1317,7 +1344,6 @@
        "5        ADF0066        158.0                      5.27   \n",
        "319      ADF0067       2898.0                     96.60   \n",
        "...          ...          ...                       ...   \n",
-       "1398     ADF1971        109.0                      3.63   \n",
        "1219     ADF1972        415.0                     13.83   \n",
        "927      ADF1973        195.0                      6.50   \n",
        "928      ADF1974        207.0                      6.90   \n",
@@ -1347,6 +1373,7 @@
        "939      ADF1998       1272.0                     42.40   \n",
        "302      ADF1999        125.0                      4.17   \n",
        "303      ADF2000       2308.0                     76.93   \n",
+       "1400         NaN          NaN                       NaN   \n",
        "\n",
        "      Total Spend in Months 1 and 2 of 2017  Total SMS Spend  \\\n",
        "1225                                49.6700             0.00   \n",
@@ -1380,7 +1407,6 @@
        "5                                  792.1144            28.63   \n",
        "319                                981.8500             0.00   \n",
        "...                                     ...              ...   \n",
-       "1398                                45.0900             0.00   \n",
        "1219                                70.8648             9.56   \n",
        "927                                 78.2440            31.07   \n",
        "928                                 88.8900            18.31   \n",
@@ -1410,6 +1436,7 @@
        "939                               1932.6000            75.85   \n",
        "302                               2138.6992             1.75   \n",
        "303                                481.9000             0.00   \n",
+       "1400                                    NaN              NaN   \n",
        "\n",
        "      Total Data Spend  Total Data Consumption  Total Unique Calls  \\\n",
        "1225             38.75            6.941061e+03                 1.0   \n",
@@ -1443,7 +1470,6 @@
        "5               108.75            1.077136e+05               101.0   \n",
        "319               0.00            4.300260e+04                87.0   \n",
        "...                ...                     ...                 ...   \n",
-       "1398              0.00            6.581623e+05                20.0   \n",
        "1219              0.00            3.658939e+03                10.0   \n",
        "927              10.00            4.791865e+02                19.0   \n",
        "928               5.00            3.650967e+02                22.0   \n",
@@ -1473,6 +1499,7 @@
        "939              56.25            1.861878e+05               220.0   \n",
        "302              41.25            9.014947e+03                25.0   \n",
        "303             125.00            6.205152e+05                 3.0   \n",
+       "1400               NaN                     NaN                 NaN   \n",
        "\n",
        "      Total Onnet spend   Total Offnet spend  \\\n",
        "1225                 0.0              1092.0   \n",
@@ -1506,7 +1533,6 @@
        "5                 7296.0             16636.0   \n",
        "319                  0.0              7298.0   \n",
        "...                  ...                 ...   \n",
-       "1398               240.0              3611.0   \n",
        "1219              1253.0              1121.0   \n",
        "927               1980.0              1211.0   \n",
        "928                  0.0              3568.0   \n",
@@ -1536,6 +1562,7 @@
        "939              10087.0             88726.0   \n",
        "302                228.0              5236.0   \n",
        "303                  0.0               609.0   \n",
+       "1400                 NaN                 NaN   \n",
        "\n",
        "      Total Call centre complaint calls Network type subscription in Month 1  \\\n",
        "1225                                1.0                                  NaN   \n",
@@ -1569,7 +1596,6 @@
        "5                                   1.0                                   2G   \n",
        "319                                 2.0                                   3G   \n",
        "...                                 ...                                  ...   \n",
-       "1398                                1.0                                  NaN   \n",
        "1219                                1.0                                Other   \n",
        "927                                 1.0                                   3G   \n",
        "928                                 1.0                                   3G   \n",
@@ -1599,6 +1625,7 @@
        "939                                 1.0                                   3G   \n",
        "302                                 1.0                                   2G   \n",
        "303                                 1.0                                   2G   \n",
+       "1400                                NaN                                  NaN   \n",
        "\n",
        "     Network type subscription in Month 2  \\\n",
        "1225                                   3G   \n",
@@ -1632,7 +1659,6 @@
        "5                                      2G   \n",
        "319                                    3G   \n",
        "...                                   ...   \n",
-       "1398                                   3G   \n",
        "1219                                Other   \n",
        "927                                    3G   \n",
        "928                                    3G   \n",
@@ -1662,6 +1688,7 @@
        "939                                    3G   \n",
        "302                                    2G   \n",
        "303                                    2G   \n",
+       "1400                                  NaN   \n",
        "\n",
        "     Most Loved Competitor network in in Month 1  \\\n",
        "1225                                       Mango   \n",
@@ -1695,7 +1722,6 @@
        "5                                           Uxaa   \n",
        "319                                        Mango   \n",
        "...                                          ...   \n",
-       "1398                                        Uxaa   \n",
        "1219                                      Zintel   \n",
        "927                                       Zintel   \n",
        "928                                         PQza   \n",
@@ -1725,6 +1751,7 @@
        "939                                       Zintel   \n",
        "302                                       ToCall   \n",
        "303                                          NaN   \n",
+       "1400                                         NaN   \n",
        "\n",
        "     Most Loved Competitor network in in Month 2  Churn Status  \n",
        "1225                                       Mango           0.0  \n",
@@ -1758,7 +1785,6 @@
        "5                                          Mango           0.0  \n",
        "319                                        Mango           0.0  \n",
        "...                                          ...           ...  \n",
-       "1398                                      Zintel           1.0  \n",
        "1219                                      Zintel           1.0  \n",
        "927                                       Zintel           1.0  \n",
        "928                                       Zintel           1.0  \n",
@@ -1788,11 +1814,12 @@
        "939                                       Zintel           1.0  \n",
        "302                                       Zintel           1.0  \n",
        "303                                          NaN           0.0  \n",
+       "1400                                         NaN           NaN  \n",
        "\n",
-       "[1400 rows x 16 columns]"
+       "[1401 rows x 16 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1834,7 +1861,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,6 +2138,31 @@
    "source": [
     "import pystan\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "数式\n",
+    "https://qiita.com/namoshika/items/63db972bfd1030f8264a\n",
+    "\n",
+    "$$\n",
+    "    % 空白は表示に影響しない。コメントは\"%\"で始める\n",
+    "    % 下付き文字は\"_a\"、上付き文字は\"^a\"\n",
+    "    % 改行は\"\\\\\"を付ける\n",
+    "    y_1 = ax^2 \\\\\n",
+    "    % 複数文字を1要素とする際は{...}で囲う\n",
+    "    % 空白は\"\\quad\"\n",
+    "    y_2 = ax^{10} \\quad y_3 = ax \\\\\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
