--- a/data/NigeriaTelecomChurn.ipynb
+++ b/data/NigeriaTelecomChurn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -12,7 +12,10 @@
     {
      "data": {
       "text/html": [
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css\">\n"
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css\">\n",
+       "<style type=\"text/css\">\n",
+       "text-align: left;\n",
+       "</style>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -24,7 +27,10 @@
    ],
    "source": [
     "%%HTML\n",
-    "<link rel=\"stylesheet\" type=\"text/css\" href=\"https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css\">\n"
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"https://raw.githubusercontent.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css\">\n",
+    "<style type=\"text/css\">\n",
+    "text-align: left;\n",
+    "</style>\n"
    ]
   },
   {
